# lambdas

./: Makefile  env.ml  interp.ml  lexer.mll  main.ml  parser.mly  term.ml  untyped.ml
eopl/examples/letrec/: ex2.letrec
eopl/src/LetRec/: Main.hs
haskell/eopl/: README  eopl.cabal
haskell/eopl/examples/letrec/: ex1.letrec
haskell/eopl/src/LetRec/: Expr.hs  Lexer.hs  Parser.hs
haskell/eopl/src/Shared/: Environment.hs
haskell/simply-typed/: Environment.hs
haskell/untyped/: untyped.cabal
haskell/untyped/examples/: basic  factorial  scope  scope.ot
haskell/untyped/src/: Env.hs  Expr.hs  Interp.hs  Lexer.hs  Main.hs  Parser.hs
ocaml/untyped-cont/: .gitignore  Makefile  interp.ml  main.ml  parser.mly
ocaml/untyped-simple/: .gitignore  env.mli  main.ml
simply-typed/: SimplyTyped.hs
tests/: fixpoint  fixpoint2  ifthenelse  precedence
untyped-cont/: env.ml  term.ml
untyped-cont/tests/: factorial  scope
untyped-simple/: interp.ml
